<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2013 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->

<resources>

    <string name="app_name">Hacktive Mtl</string>

    <string-array name="menu_categories">
        <item>Home</item>
        <item>Challenge</item>
        <item>Issues</item>
        <item>Ideas</item>
        <item>Profile</item>
    </string-array>
    <string-array name="alerts_categories">
        <item>Select a category</item>
        <item>Garbage collection</item>
        <item>Collection bins</item>
        <item>Graffitis</item>
        <item>Roads and sidewalks</item>
        <item>Winter situations / snowblowing</item>
        <item>Pets</item>
        <item>Neighboring problems</item>
        <item>Lighting</item>
        <item>Sewers and aqueducts</item>
        <item>Others</item>
    </string-array>
    <string-array name="ideas_categories">
        <item>Select a category</item>
        <item>Garbage</item>
        <item>Gardening</item>
        <item>Public transit</item>
        <item>Supplies</item>
        <item>Snowblowing</item>
        <item>Physical activities</item>
        <item>Housing</item>
        <item>Electricity</item>
        <item>Water</item>
    </string-array>

    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="getting_courts">Loading events&#8230;</string>
    <string name="home">Home</string>
    <string name="suggest">SEND</string>
    <string name="players">Users : %d</string>
    <string name="no_result">No Result</string>
    <string name="getting_your_position">Getting your position</string>
    <string name="entering_court_zone">Entering event zone</string>
    <string name="leaving_court_zone">Leaving event zone</string>
    <string name="you_just_leaved_a_court">You just leaved an event</string>
    <string name="you_just_entered_a_court">You just entered an event</string>
    <string name="file_uploaded">File uploaded</string>
    <string name="error_uploading_file">Error uploading file</string>
    <string name="situation_type">Situation type</string>
    <string name="event_title_hint">Title - ex : Signalisation incorrecte</string>
    <string name="event_description_hint">Description  - ex : blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah</string>
    <string name="event_tag_hint">Key words - ex : Garbage, Green street, Fruit picking</string>
    <string name="settings">Settings</string>
    <string name="radius">Radius</string>
    <string name="discovered_by">Discovered by %s</string>
    <string name="court_suggestion_success">Thank you for your suggestion. The event will be visible after review.</string>
    <string name="court_suggestion_failure">Could not add the suggested event. Please submit again later.</string>
    <string name="court_suggestion_progress">Uploading&#8230;</string>
    <string name="court_suggestion_title">Event suggestion</string>
    <string name="challenges">Challenges</string>
    <string name="ideas">Ideas</string>
    <string name="issues">Issues</string>
    <string name="district">District</string>
    <string name="me">Me</string>
    <string name="montreal">Montréal</string>
    <string name="submitted_ideas">SUBMITTED\nIDEAS</string>
    <string name="issues_solved">SOLVED\nISSUES</string>
    <string name="challenges_resolved">RESOLVED\nCHALLENGES</string>
    <string name="disconnect">Disconnect</string>
    <string name="facebook_connect">Facebook connect</string>
    <string name="facebook_app_id">167930773411045</string>
    <string name="error_retrieving_ideas">Error retrieving ideas</string>
    <string name="error_retrieving_alerts">Error retrieving alerts</string>
    <string name="error_retrieving_challenges">Error retrieving challenges</string>
    <string name="submitted_by">Submitted by</string>
    <string name="suggestion_idea">Submit an idea</string>
    <string name="suggestion_problem">Submit a problem</string>
    <string name="suggestion_challenge">Suggest a challenge</string>
    <string name="suggestion_idea_desc">Have an idea for something that could contribute to the development of your district?  Let us know.</string>
    <string name="suggestion_problem_desc">Pothole? Broken infrastructure? Ssend us a detailed description of the problem along with a picture.</string>
    <string name="suggestion_challenge_desc">Thinking about something you consider people should try out?  Shoot!</string>
    <string name="submit_challenge">Submit challenge</string>
    <string name="submit_alert">Submit alert</string>
    <string name="submit_idea">Submit idea</string>
    <string name="cannot_get_your_location">Cannot get your location</string>
    <string name="please_enter_a_longer_title">Please enter a longer title</string>
    <string name="please_enter_a_longer_description">Please enter a longer description</string>
    <string name="please_take_a_picture">Please take a picture</string>
    <string name="please_select_a_category">Please select a category</string>
    <string name="explain_photo">1 - Take a picture related to the problem</string>
    <string name="explain_situation">2 - Describe the situation</string>
    <string name="explain_send">3 - Send your alert</string>
    <string name="explain_button">Take a picture</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>