<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EEEEEE" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="15dp" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingRight="5dp"
                android:scaleType="centerCrop"
                android:src="@drawable/generic_photo" />

            <com.google.android.gms.maps.MapView
                android:id="@+id/mapView"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingLeft="5dp" />
        </LinearLayout>

        <EditText
            android:id="@+id/editTextTitle"
            style="@style/form_textbox"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/event_title_hint" />

        <EditText
            android:id="@+id/editTextDescription"
            style="@style/form_textbox"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_gravity="center"
            android:gravity="top|left"
            android:hint="@string/event_description_hint"
            android:paddingLeft="7dp"
            android:paddingTop="7dp" />

        <EditText
            android:id="@+id/editTextTags"
            style="@style/form_textbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/event_tag_hint"
            android:maxLines="2" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="5dp"
            android:paddingLeft="15dp" >

            <ImageView
                android:id="@+id/imageViewUserProfile"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"/>

            <TextView
                android:id="@+id/textViewSubmittedBy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="15dp"
                android:layout_toRightOf="@id/imageViewUserProfile"
                android:text="@string/submitted_by"
                android:textColor="@android:color/secondary_text_light" />

            <TextView
                android:id="@+id/textViewUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textViewSubmittedBy"
                android:layout_below="@+id/textViewSubmittedBy"
                android:textSize="14sp" />
        </RelativeLayout>
    </LinearLayout>

</ScrollView>